--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -24,10 +24,52 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  font-family: Lato !important;
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+.outline {
+  color: white; /* Unfortunately you can't use transparent here … */
+  text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff,
+    1px 1px 0 #fff;
+}
+@supports ((text-stroke: 2px white) or (-webkit-text-stroke: 2px white)) {
+  .outline {
+    color: transparent;
+    -webkit-text-stroke: 2px white;
+    text-stroke: 2px white;
+    text-shadow: none;
+  }
+}
+
+.outlinedark {
+  color: #0c121e; /* Unfortunately you can't use transparent here … */
+  text-shadow: -1px -1px 0 #0c121e, 1px -1px 0 #0c121e, -1px 1px 0 #0c121e,
+    1px 1px 0 #0c121e;
+}
+@supports (
+  (text-stroke: 1px rgba(26, 37, 57, 0.45)) or
+    (-webkit-text-stroke: 1px rgba(26, 37, 57, 0.45))
+) {
+  .outlinedark {
+    color: transparent;
+    -webkit-text-stroke: 1px rgba(26, 37, 57, 0.45);
+    text-stroke: 1px rgba(26, 37, 57, 0.45);
+    text-shadow: none;
+  }
+}
+
+.scroll::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.scroll {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
